added function to retrieve local storage, added screenshot, removed all reference content

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -60,89 +60,61 @@
         <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="11am" class="row time-block">
         <div class="col-2 hour">
           11:00AM
         </div>
-        <div class="col-9 activitytext">
-          <p id="11am"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="12pm" class="row time-block">
         <div class="col-2 hour">
-          12:00AM
+          12:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="12pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="1pm" class="row time-block">
         <div class="col-2 hour">
           1:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="1pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="2pm" class="row time-block">
         <div class="col-2 hour">
           2:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="2pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="3pm" class="row time-block">
         <div class="col-2 hour">
           3:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="3pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="4pm" class="row time-block">
         <div class="col-2 hour">
           4:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="4pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
-      <div class="row time-block">
+      <div id="5pm" class="row time-block">
         <div class="col-2 hour">
           5:00PM
         </div>
-        <div class="col-9 activitytext">
-          <p id="5pm"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
-      </div> 
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
+      </div>
 
     </div>
 
