--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Weather Forecast</title>
 </head>
@@ -15,16 +16,14 @@
   <header class="header">
     <h1 class="app-title">Weather Dashboard</h1>
     <h2 id="currentDay">Current Day</h2>
-    <p>Find todays weather and a five day forecast for your selected city</p>
-    <h2 id="currentDay"></h2>
   </header>
 
 
   <main class="flex-row justify-space-between">
-    <div class="col-12 col-md-4">
 
+    <div class="col-12 col-md-3">
       <div class="card">
-        <h3 class="card-header text-uppercase">Enter City Name</h3>
+        <h3 class="card-header text-uppercase">Search for a City</h3>
         <form id="user-form" class="card-body">
           <label class="form-label" for="cityname"></label>
           <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
@@ -34,18 +33,69 @@
 
       <div class="card">
         <h3 class="card-header text-uppercase">Searched Weather History</h3>
-        <div id="searched-buttons" class="card-body">
+        <div class="list-group">
+          <ul id="history">
+            <li>Atlanta</li>
+            <li>Milwaukee</li>
+          </ul>
         </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-8">
+    <div class="col-12 col-md-9">
       <h2 class="subtitle">Showing Weather for: <span id="repo-search-term"></span></h2>
-    
-      <!-- Hook to attach dynamic elements -->
-        
-      <div id="repos-container" class="list-group"></div>
+       <div class ="currentCity">
+         <p>ATLANTA</p> 
+         <p>(3/30/21)</p>
+         <p>Temp:</p>
+         <p>Wind:</p>
+         <p>Humidity:</p>
+         <p>UV Index:</p>
+       </div>
+
+      <div class="col-12"><h4>5-Day Forecast:</h4></div>
+
+      <div class="container">
+        <div class="row dayForecasts">
+          <div class="col weatherDay">
+            <p>Date</p>
+            <p>Icon</p>
+            <p>Temp:</p>
+            <p>Humidity:</p>
+            <p>UV Index:</p>
+          </div>
+          <div class="col weatherDay">
+            <p>Date</p>
+            <p>Icon</p>
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>UV Index</p>
+          </div>
+          <div class="col weatherDay">
+            <p>Date</p>
+            <p>Icon</p>
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>UV Index</p>
+          </div>
+          <div class="col weatherDay">
+            <p>Date</p>
+            <p>Icon</p>
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>UV Index</p>
+          </div>
+          <div class="col weatherDay">
+            <p>Date</p>
+            <p>Icon</p>
+            <p>Temp</p>
+            <p>Humidity</p>
+            <p>UV Index</p>
+          </div>
+        </div>
+      </div>
     </div>
+
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -55,8 +105,3 @@
 </body>
 
 </html>
-
-
-          <!-- <button data-language="javascript" class="btn">JavaScript</button>
-          <button data-language="html" class="btn">HTML</button>
-          <button data-language="css" class="btn">CSS</button> -->
