added a function to save new locations to local storage and populate searched history

--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -27,7 +27,7 @@
         <form id="user-form" class="card-body">
           <label class="form-label" for="cityname"></label>
           <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Find Weather</button>
+          <button type="submit" id="searchBtn" class="btn">Find Weather</button>
         </form>
       </div>
 
@@ -35,8 +35,6 @@
         <h3 class="card-header">SEARCHED WEATHER HISTORY</h3>
         <div class="list-group">
           <ul id="history">
-            <li>Atlanta</li>
-            <li>Milwaukee</li>
           </ul>
         </div>
       </div>
