added lon and lat pull from first fetch, changed 5 day forecast fetch to onecall using the lat and lon from the first fetch

--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -48,8 +48,7 @@
          <p id="searchWind">Wind:</p>
          <p id="searchHumidity">Humidity:</p>
          <p id="searchDescription">Description:</p>
-         <!-- UVI has been depracated from open weather
-         <p id="searchUVindex">UV Index:</p> -->
+         <p id="searchUVindex">UV Index:</p>
        </div>
 
       <div class="col-12"><h4>5-Day Forecast:</h4></div>
