hard coded a weather icon

--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -54,10 +54,11 @@
       <div class="col-12"><h4>5-Day Forecast:</h4></div>
 
       <div class="container">
-        <div class="row dayForecasts">
+        <div id="forecastAnchor" class="row dayForecasts">
           <div class="col weatherDay">
             <p>Date</p>
-            <p>Icon</p>
+            <!-- Weather Icon -->
+            <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather icon">
             <p>Temp:</p>
             <p>Humidity:</p>
             <p>UV Index:</p>
